tests/error/tracing_errors/linear_drop3.err
Error: Error in comptime function return (at $FILE:11:0)
   | 
 9 | 
10 | @guppy.comptime(module)
11 | def test(qs: array[qubit, 10] @ owned) -> None:
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ...
13 |         measure(qs[i])
   | ^^^^^^^^^^^^^^^^^^^^^^

Value with non-droppable type `qubit` is leaked by this function

Guppy compilation failed due to 1 previous error
